--- a/destination.html
+++ b/destination.html
@@ -31,18 +31,12 @@
       <main class="page-container">
       	<h1 class="page-title barlow-condensed-regular"><span class="barlow-condensed-bold">01</span> Pick your destination</h1>
         <img class="image-planet" src="./assets/destination/image-moon.png" alt="moon">
-				<div class="container-text">
+				<section class="container-text">
 					<ul class="list list-planet barlow-condensed-regular">
-						<!-- <li class="li-planet selected"><button class="button button-planet"><a href="#moon">Moon</a></button></li>
-						<li class="li-planet"><button class="button button-planet"><a href="#mars">Mars</a></button></li>
-						<li class="li-planet"><button class="button button-planet"><a href="#europa">Europa</a></button></li>
-						<li class="li-planet"><button class="button button-planet"><a href="#titan">Titan</a></button></li> -->
-
             <li class="li-planet selected"><a class="button button-planet" href="#moon">Moon</a></li>
 						<li class="li-planet"><a class="button button-planet" href="#mars">Mars</a></li>
 						<li class="li-planet"><a class="button button-planet" href="#europa">Europa</a></li>
 						<li class="li-planet"><a class="button button-planet" href="#titan">Titan</a></li>
-
 					</ul>
 					<h2 class="planet-title bellefair-regular">Moon</h2>
 					<p class="text barlow-regular">See our planet as you’ve never seen it before. A perfect relaxing trip away to help 
@@ -53,8 +47,7 @@
 						<p class="info bellefair-regular"><span>Avg. distance</span><span>384,400 km</span></p>
 						<p class="info bellefair-regular"><span>Est. travel time</span><span>3 days</span></p>						
 					</div>
-				</div>
-
+				</section>
       </main>
 
     <script src="./script.js"></script>
