--- a/technology.html
+++ b/technology.html
@@ -31,7 +31,8 @@
       <main class="techno-main-container">
       	<h1 class="page-title barlow-condensed-regular"><span class="barlow-condensed-bold">03</span> Space launch 101</h1>
 				<div class="container-image-techno"></div>
-				<div class="container-text">
+
+				<section class="container-text">
 					<div class="container-button-techno">
             <a class="button button-techno selected bellefair-regular" href="#vehicle">1</a>
 						<a class="button button-techno bellefair-regular" href="#spaceport">2</a>
@@ -42,8 +43,7 @@
 					payload from Earth's surface to space, usually to Earth orbit or beyond. Our 
 					WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall, 
 					it's quite an awe-inspiring sight on the launch pad!</p>
-				</div>
-
+        </section>
 
       </main>
 
