--- a/crew.html
+++ b/crew.html
@@ -29,7 +29,7 @@
 
       <main class="page-container">
       	<h1 class="page-title barlow-condensed-regular"><span class="barlow-condensed-bold">02</span> Meet your crew</h1>
-				<div class="container-text">
+				<section class="container-text">
 					<h2 class="sub-title bellefair-regular" id="here"><span>Commander</span><span>Douglas Hurley</span></h2>
 					<p class="text barlow-regular">Douglas Gerald Hurley is an American engineer, former Marine Corps pilot 
 					and former NASA astronaut. He launched into space for the third time as 
@@ -40,7 +40,7 @@
 						<li class="li-member"><a class="clip" href="#glover"></a></li>
 						<li class="li-member"><a class="clip" href="#ansari"></a></li>
 					</ul>
-				</div>				
+				</section>				
 				<div class="image-shadow">
 					<picture class="container-crew-image">
 						<source srcset="./assets/crew/image-douglas-hurley.webp" type="image/webp">
